improvements- slight refactor
