# gen/gql/go/model/models_gen.go
@@ -7,20 +7,18 @@ import (
 )
 
 type Event struct {
+	Channel  string                 `json:"channel"`
+	Data     map[string]interface{} `json:"data"`
+	Metadata map[string]interface{} `json:"metadata"`
+}
+
+type EventDetail struct {
 	ID       string                 `json:"id"`
 	Channel  string                 `json:"channel"`
 	Data     map[string]interface{} `json:"data"`
 	Metadata map[string]interface{} `json:"metadata"`
 	Claims   map[string]interface{} `json:"claims"`
 	Time     time.Time              `json:"time"`
-}
-
-type EventInput struct {
-	ID       *string                `json:"id"`
-	Channel  string                 `json:"channel"`
-	Data     map[string]interface{} `json:"data"`
-	Metadata map[string]interface{} `json:"metadata"`
-	Time     *time.Time             `json:"time"`
 }
 
 type HistoryOpts struct {
